# AstraTurbo

./: =3.7  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
astraturbo/: __init__.py  __main__.py
astraturbo/ai/: __init__.py  assistant.py  surrogate.py  tools.py
astraturbo/baseclass/: __init__.py  atobject.py  drawable.py  node.py
astraturbo/blade/: __init__.py  annular_array.py  blade_row.py  blade_surface.py  camber_surface.py  hub_shroud.py  section.py  stacking.py
astraturbo/camberline/: __init__.py  camberline.py  circular_arc.py  joukowski.py  naca2digit.py  naca65.py  nurbs.py  polynomial.py
astraturbo/cfd/: __init__.py  openfoam.py  postprocess.py  runner.py  su2.py  workflow.py
astraturbo/cli/: main.py
astraturbo/database/: __init__.py  design_db.py
astraturbo/design/: __init__.py  centrifugal.py  compressor_map.py  cooling.py  electric_motor.py  engine_cycle.py  meanline.py  off_design.py  propeller.py  pump.py  turbine.py  turbine_off_design.py  turbopump.py  velocity_triangle.py
astraturbo/distribution/: __init__.py  chebyshev.py  linear.py
astraturbo/export/: __init__.py  cad_export.py  cgns_reader.py  cgns_writer.py  formats.py  meshio_bridge.py  openfoam_reader.py  openfoam_writer.py
astraturbo/fea/: __init__.py  calculix.py  material.py  mesh_export.py  workflow.py
astraturbo/foundation/: __init__.py  containers.py  decorators.py  design_chain.py  properties.py  serialization.py  signals.py  types.py  undo.py  units.py
astraturbo/gui/: __init__.py  app.py  design_explorer.py  main_window.py
astraturbo/gui/dialogs/: __init__.py  export_dialog.py  import_dialog.py  mesh_settings.py  new_project.py
astraturbo/gui/panels/: __init__.py  ai_chat.py  blade_editor.py  machine_tree.py  mesh_panel.py  profile_editor.py  properties_panel.py
astraturbo/gui/plot/: __init__.py  meridional_plot.py  profile_plot.py
astraturbo/gui/viewer/: __init__.py  point_cloud_viewer.py  vtk_widget.py
astraturbo/hpc/: __init__.py  aws_setup.py  job_manager.py
astraturbo/machine/: __init__.py  project.py  turbomachine.py
astraturbo/mesh/: __init__.py  grading.py  multiblock.py  multistage.py  polyline.py  quality.py  s1_mesher.py  scm_mesher.py  smoothing.py  tip_clearance.py  transfinite.py  vertex_extraction.py
astraturbo/mesh/ogrid/: __init__.py  mesh_generator.py  topology.py
astraturbo/nurbs/: __init__.py  converters.py  curves.py  operations.py  surfaces.py
astraturbo/optimization/: __init__.py  multifidelity.py  objectives.py  optimizer.py  parameterization.py
astraturbo/profile/: __init__.py  profile.py  superposition.py
astraturbo/reports/: __init__.py  generator.py  plots.py
astraturbo/solver/: __init__.py  loss_models.py  throughflow.py
astraturbo/thickness/: __init__.py  elliptic.py  joukowski.py  naca4digit.py  naca65_series.py  thickness.py
docs/: architecture.md  getting_started.md  tutorials.md
examples/pipeline/: .gitignore  run_engines.py  run_production.py
tests/: test_cli_integration.py  test_gui_components.py  test_missing_modules.py  test_new_features.py
tests/test_blade/: test_blade.py
tests/test_camberline/: test_camberlines.py
tests/test_cfd_workflow/: test_cfd_workflow.py
tests/test_design/: test_centrifugal_and_reports.py  test_cooling.py  test_design.py  test_electric_motor.py  test_engine_cycle.py  test_propeller.py  test_pump.py  test_turbine.py  test_turbine_off_design.py  test_turbopump.py
tests/test_export/: test_export.py  test_openfoam_reader.py
tests/test_fea/: test_fea.py  test_temperature_materials.py
tests/test_foundation/: test_properties.py  test_signals.py  test_undo.py
tests/test_mesh/: test_gaps.py  test_mesh.py
tests/test_nurbs/: test_nurbs.py
tests/test_profile/: test_superposition.py
tests/test_reports/: test_integration.py  test_plots.py
tests/test_thickness/: test_thickness.py
tests/test_validation/: __init__.py  test_meanline_thermodynamics.py  test_mesh_quality_bounds.py  test_naca65_profile.py  test_nasa_rotor37.py  test_new_solvers.py  test_off_design.py  test_openfoam_run.py  test_regression.py  test_velocity_triangles.py
tests/test_validation/reference_data/: naca65_1_10.csv  nasa_rotor37.json
