[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraturbo"
version = "0.1.0"
description = "Open-source integrated turbomachinery design and simulation platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Ayushman Dutta", email = "ayushman999@gmail.com"},
]
keywords = [
    "turbomachinery",
    "blade-design",
    "cfd",
    "fea",
    "mesh-generation",
    "compressor",
    "turbine",
    "cgns",
    "openfoam",
    "fluent",
    "calculix",
    "meanline",
    "velocity-triangle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "geomdl>=5.3.1",
    "h5py>=3.8",
    "meshio>=5.3",
    "pyyaml>=6.0",
    "blinker>=1.6",
]

[project.optional-dependencies]
cad = [
    "cadquery>=2.3",
]
gui = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "PyOpenGL>=3.1",
    "vtk>=9.2",
]
optimization = [
    "pymoo>=0.6",
]
ai = [
    "anthropic>=0.40",
]
aws = [
    "boto3>=1.28",
]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "mypy>=1.0",
    "ruff>=0.1",
]
all = [
    "astraturbo[cad,gui,optimization,ai,aws,dev]",
]

[project.urls]
Homepage = "https://github.com/ayushman4/AstraTurbo"
Repository = "https://github.com/ayushman4/AstraTurbo"
Issues = "https://github.com/ayushman4/AstraTurbo/issues"

[project.scripts]
astraturbo = "astraturbo.cli.main:main"

[project.gui-scripts]
astraturbo-gui = "astraturbo.gui.app:main"

[tool.setuptools.packages.find]
include = ["astraturbo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
